--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
+</head>
   
 
 <body>
@@ -101,6 +104,55 @@
     <script>
         AOS.init();
       </script>
+
+<div class="container text-center">
+  <div class="row">
+    <div class="col" >
+      <img src="./images/imagen4.jpeg" style="width: 40rem;" alt="">
+    </div>
+    <div class="col order-5">
+      <p class="PAULA">  EXPERTOS EN FABRICACION DE MATERIALES EN ARCILLA</p>
+      <p class="maria"> Alto nivel de compromiso, ventas al por mayor</p>
+      <p class="espinosa">Somos derivados de arcilla, una empresa dedicada a la fabricacion de materiales en gres, muy renocidos en el area de la construccion,destacando su compromiso y responsabilidad empresarial, contribuyendo al desarrollo de los proyectos de nuestos clientes.
+        visitenos y encontratas todo lo relacionado con ladrillo,bloque,estructurales y mucho mas
+      </p>
+    </div>
+    
+  </div>
+</div>
+
+
+<div class="footer2">
+  <footer class="bg-coral text-center text-white py-3 mt-5  ">
+    <div class="container text-center">
+      <div class="row align-items-center">
+        <div class="col">
+          <img src="./images/logo2-removebg-preview.png" alt="logo" width="250px">
+          <p> Fabricantes,comercializadores </p>
+          <p> y distribuidores </p>
+        </div>
+       
+        <div class="col">
+          <H1 class="COLUMNA2F">CONTACTENOS</H1>
+
+
+         <p class="tel"><i class="fa-solid fa-phone"></i> (+57) 3219955820</p>
+         <p class="tel">(+57)3134543704</p>
+        <p class="tel"><i class="fa-solid fa-location-dot"></i>  Via zipaquira-ubate vereda patio bonito </p>
+   <p class="tel"><i class="fa-solid fa-envelope"></i> derivadosdearcilla@hotmail.es</p>
+        </div>
+        <div class="col">
+          <h1 class="COLUMNA2F">PRODUCTOS DESTACADOS</h1>
+          <P class="tel"><i class="fa-solid fa-arrow-right"></i>Bloque</P>
+          <p class="tel"><i class="fa-solid fa-arrow-right"></i>Bloquelon</p>
+          <p class="tel"><i class="fa-solid fa-arrow-right"></i>Regilla</p>
+          <P class="tel"><i class="fa-solid fa-arrow-right"></i>Ladrillo</P>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
+
 </body>
 
 </html> 
